# bloom

./: .bloom.env  .gitignore  .pre-commit-config.yaml  =2.0.0  AGENTS.md  ARCHITECTURE_GUIDANCE.md  ATLAS_BLOOM_API_GUIDANCE.md  BLOOM_DATABASE_REFACTOR_PLAN_AUGMENT.md  BLOOM_DATABASE_REFACTOR_PLAN_VERBATIM.md  BLOOM_FUNCTIONALITY_EXPANSION.md  BLOOM_SPECIFICATION.md  BLOOM_TIMEFRAME_ANALYSIS.md  GUI_POST_IMPLEMENTATION_AUDIT.md  GUI_REFACTOR_IMPLEMENTATION_PLAN.md  MIGRATION_NOTES.md  POSSIBLE_TODOS.md  R.mmd  README.md  README.md.bland  README.md.old  README.old.md  README_ORIG.md  REQUIREMENTS.md  SERIOUS_TRUST_BREACH_GAP_ANALYSIS.md  activate  alembic.ini  bloom.sh  bloom_activate.sh  bloom_deactivate  bloom_env.yaml  bloom_shell.py  bloomuiiu.py  dag.json  dag_20250703054152.json  dag_20260203025500.json  environment.yaml  environment.yml  id_report.md  longterm.txt  main.py  (+12 more)
.augment/: RULES.md  default.md
.github/workflows/: centos.yaml  ci.yml  macos.yaml  security.yaml  ubuntu.yaml
.playwright-cli/: page-2026-04-03T21-50-10-062Z.yml  page-2026-04-06T09-35-34-004Z.yml
analytics/: README.md
analytics/config/: lis_mappings.yaml
analytics/dashboards/: equipment_utilization.json  operations_overview.json  turnaround_times.json
analytics/metabase/: docker-compose.yml  run_metabase.sh
analytics/sql_views/: install_views.sql
auth/auth_middleware/: userContext.py
auth/cognito/: client.py
auth/supabase/: connection.py
bloom_lims/: __init__.py  _version.py  anomalies.py  app.py  atlas_reference_validation.py  bdb.py  bobjs.py  bvars.py  cli.py  config.py  db.py  domain_access.py  exceptions.py  flow.mmd  graph_support.py  health.py  lims_missteps.mmd  observability.py  observability_routes.py  schema_drift.py  subjecting.py  tapdb_adapter.py  tapdb_dag.py  tapdb_metrics.py  template_identity.py
bloom_lims/api/: __init__.py  rate_limiting.py  versioning.py
bloom_lims/auth/: __init__.py  rbac.py
bloom_lims/backup/: __init__.py  backup_manager.py  cli.py  config.py  storage.py
bloom_lims/cli/: __init__.py  _registry_v2.py  config_cmd.py  config_extra.py  db.py  gui.py  info.py  integrations.py  quality.py  server.py  test.py  users.py  utils.py
bloom_lims/core/: __init__.py  action_execution.py  async_operations.py  base_objects.py  batch_operations.py  cache.py  cache_backends.py  cached_repository.py  containers.py  content.py  downloads.py  exceptions.py  lineage.py  read_replicas.py  tapdb_action_dispatcher.py  template_seed.py  template_validation.py  (+2 more)
config/: bloom-config-template.yaml
docs/: AGENT.md  ATLAS_BLOOM_CONTRACT_TESTS.md  AUTHENTICATION.md  AUTH_INTEGRATION.md  CYTOSCAPE_CODE_REVIEW.md  LEGACY_REMOVAL_GAP_REPORT.md  README.md  RELEASE_TAG_POLICY.md  SEARCH_V2.md  TAPDB_AGENT.md  TAPDB_CLI_SPECIFICATION.md  TAPDB_SPECIFICATION.md  apis.md  architecture.md  backup_recovery.md  becoming_a_discoverable_service.md  bloom_beta_api_contracts.md  bloom_final_completion_report.md  bloom_queue_model.md  bloom_queue_refactor_execplan.md  bloom_transfer_constitution_v2.md  container_first_handoff_execplan.md  gui.md  how-tos.md  material_transfer_algebra_and_execution_envelope_constitution.md  remove_siblings.md  tapdb_mount_completion_report.md  tapdb_mount_execplan.md
etc/: udat.json
prompts/: bloom_to_queues.md
schema/: tapdb_schema.sql
scripts/: audit_legacy_routes.py  canonicalize_action_imports.py  dags  find_action.py  main.py  migrate_action_ui_schema.py  migrate_bloom_user_roles.py  pregen_AY.py  provision_local_user.py  run_bloomui.sh  run_bloomui_local.sh  seed_db_containersGeneric.py
smoke_exams/: accession_extract_qant.py
stage_to_delete/: MANIFEST.md  NOT_MOVED_ACTIVE_COMPAT.md
static/: mobile.css  patient_table.js  patient_timeline.js  preview.js  style.css  template_bulk_container_create.tsv  template_bulk_create_files.tsv  template_bulk_file_create.tsv  template_bulk_file_create_all.tsv
temp_bulk_create/: FS11_dewey_bulk_create_outcomes.tsv  FS12_dewey_bulk_create_outcomes.tsv  FS13_dewey_bulk_create_outcomes.tsv  FS1_dewey_bulk_create_outcomes.tsv  FS20_dewey_bulk_create_outcomes.tsv  FS21_dewey_bulk_create_outcomes.tsv  FS22_dewey_bulk_create_outcomes.tsv  FS23_dewey_bulk_create_outcomes.tsv  FS26_dewey_bulk_create_outcomes.tsv  FS3_dewey_bulk_create_outcomes.tsv  FS6_dewey_bulk_create_outcomes.tsv  template_bulk_create_files.fin.tsv  template_bulk_create_files.tsv  template_bulk_file_create.fin.tsv  template_bulk_file_create.tsv  template_bulk_file_create2.fin.tsv  template_bulk_file_create2.tsv  test.tsv
templates/: admin.html  assay.html  bloom_header.html  bulk_create_files.html  create_file_report.html  create_file_set.html  dewey.html  dindex2.html  download_file.html  euid_details.html  file_search.html  file_set_search_results.html  file_set_urls.html  index.html  index2.html  lims_main.html  login.html  login_manual.html.stub  patient_views.html  register_file.html  search_file_sets.html  search_results.html  user_home.html  workflow_details.html
tests/: #test_file_creations.py#  conftest.py  test_accessioning_package_flow.py  test_action_button_template_safety.py  test_action_execution.py  test_action_schema_coverage.py  test_action_schema_hydration.py  test_activate_contract.py  test_activate_script.py  test_admin_auth.py  test_analytics.py  test_anomalies.py  test_api_actions_execute.py  test_api_atlas_bridge.py  test_api_auth_rbac.py  test_api_v1.py  test_atlas_lookup_resilience.py  test_atlas_reference_validation.py  test_atlas_workflow_contract.py  test_backup.py  test_beta_cross_repo_smoke.py  test_beta_lab.py  test_beta_modern_action_system.py  test_biospecimen.py  test_bloom_user_role_migration.py  test_cli.py  test_cli_db_command_paths.py  test_cli_users_issue_token.py  test_cognito_daycog_patterns.py  test_cognito_shared_pool_resolution.py  test_config_runtime.py  test_core_cache.py  test_core_validation.py  test_create_acc_workflows.py  test_cytoscape_dag.py  test_database_url.py  test_dependency_boundary.py  test_deploy_contract.py  test_deployment_chrome.py  test_dewey_integration.py  (+45 more)
(+322 files in other folders)
