# =============================================================================
# BLOOM LIMS Project Configuration
# =============================================================================
# ENVIRONMENT MANAGEMENT: This project uses CONDA for environment management.
# The conda environment is named "BLOOM" (all caps).
#
# To set up the environment:
#   conda env create -f bloom_env.yaml
#   conda activate BLOOM
#
# See bloom_env.yaml for the full list of dependencies.
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloom_lims"
dynamic = ["version"]
description = "Templated Abstract Polymorphic LIMS - A Laboratory Information Management System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "cli-core-yo>=0.2.1",
    "daylily-tapdb==3.0.3",
    "daylily-cognito==0.1.28",
    "fastapi>=0.110.0",
    "httpx>=0.27.2",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.0.3",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "psutil>=5.9.0",
    "PyYAML>=6.0",
    "requests>=2.28.2",
    "rich>=13.0",
    "sqlalchemy>=2.0.23",
    "starlette>=0.35.1",
    "uvicorn>=0.28.0",
    "zebra-day==2.4.4",
    "daylily-carrier-tracking==0.5.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["lims", "laboratory", "informatics", "bioinformatics", "sample-management"]

[project.urls]
Homepage = "https://github.com/Daylily-Informatics/bloom"
Repository = "https://github.com/Daylily-Informatics/bloom.git"
Issues = "https://github.com/Daylily-Informatics/bloom/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
bloom = "bloom_lims.cli:main"

[tool.setuptools_scm]
version_file = "bloom_lims/_scm_version.py"
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["."]
include = ["bloom_lims*"]

[tool.setuptools.package-data]
bloom_lims = ["etc/*.yaml"]

# =============================================================================
# BLOOM Environment Configuration
# =============================================================================
# This section documents the conda environment configuration for tools and
# AI assistants that need to understand the project's environment management.

[tool.bloom]
# Environment management method - DO NOT USE pip/poetry/venv for this project
environment_manager = "conda"

# The conda environment name (IMPORTANT: all caps)
conda_environment_name = "BLOOM"

# The conda environment definition file
conda_environment_file = "bloom_env.yaml"

# Commands to set up the development environment
setup_commands = [
    "conda env create -f bloom_env.yaml",
    "conda activate BLOOM",
    "pip install -e .",
]

# Command to run tests (must activate conda environment first)
test_command = "conda run -n BLOOM pytest"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=bloom_lims --cov=main --cov-report=term-missing --cov-report=html:htmlcov"
markers = [
    "api: marks tests as API tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["bloom_lims", "main"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/database/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 39
show_missing = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | bloom_lims/database
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "bloom_lims/database", "stage_to_delete"]
skips = [
    "B101",  # allow assert in non-test code (used extensively)
    "B105",  # false positives on token/status/template constants
    "B106",  # false positives on placeholder middleware/config values in legacy paths
    "B110",  # intentional best-effort config/session cleanup paths
    "B311",  # non-cryptographic randomness in legacy workflows/UI naming
    "B404",  # CLI/admin subprocess usage is intentional
    "B603",  # subprocess calls execute trusted local tools
    "B607",  # subprocess calls rely on known PATH tools in operator environments
    "B608",  # legacy SQL fragments are operator-authored/static
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
